--- a/html5indexedDatabase/README
+++ b/html5indexedDatabase/README
@@ -17,7 +17,9 @@
 * [[101feature:Total]]
 * [[101feature:Cut]]
 
-== Motivation == 
+== Motivation ==
+
+The indexed database is the current alternative to the (deprecated) [[101implementation:html5sqlDatabase|web database]] in HTML5. Apart from web storage ([[101implementation:html5local|local storage]] and [[101implementation:html5session|session storage]]), the indexed database feature gains the main support in relation to [[offline storage]].
 
 == Illustration ==
 
