git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1360 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5indexedDatabase/README
+++ b/html5indexedDatabase/README
@@ -19,7 +19,7 @@
 
 == Motivation ==
 
-The indexed database is the current alternative to the (deprecated) [[101implementation:html5sqlDatabase|web database]] in HTML5. Apart from web storage ([[101implementation:html5local|local storage]] and [[101implementation:html5session|session storage]]), the indexed database feature gains the main support in relation to [[offline storage]].
+The indexed database is the current alternative to the [[101implementation:html5sqlDatabase|web database]] (outdated!) in HTML5. Apart from web storage ([[101implementation:html5local|local storage]] and [[101implementation:html5session|session storage]]), the indexed database feature gains the main support in relation to [[offline storage]].
 
 == Illustration ==
 
