--- a/html5indexedDatabase/README
+++ b/html5indexedDatabase/README
@@ -52,7 +52,8 @@ companies.indexedDB.cut = function() {
 		// next employee ...
 		result.continue();
 	};
-	
+
+	// error handling
 	cursorRequest.onerror = companies.indexedDB.onerror;
 }
 </syntaxhighlight>
