git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1395 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5indexedDatabase/README
+++ b/html5indexedDatabase/README
@@ -19,7 +19,7 @@
 
 == Motivation ==
 
-The indexed database is the current alternative to the [[101implementation:html5sqlDatabase|web database]] (outdated!) in HTML5. Apart from web storage ([[101implementation:html5local|local storage]] and [[101implementation:html5session|session storage]]), the indexed database feature gains the main support in relation to [[offline storage]].
+The indexed database is the current alternative to the [[101implementation:html5sqlDatabase|web database]] (outdated!) in HTML5. Apart from web storage ([[101implementation:html5local|local storage]] and [[101implementation:html5session|session storage]]), the indexed database feature gains the main support in relation to [[offline storage]]. The access to the data is handled pver [[asynchronous communication]].
 
 == Illustration ==
 
@@ -60,7 +60,8 @@ companies.indexedDB.cut = function() {
 
 == Usage ==
 
-* Open the 101companies.html with your web-browser (check [[Language:HTML5|HTML5]] for the HTML5-support of your browser)
+* Check out all files from the repository
+* Open the index.html with your web-browser (check [[Language:HTML5|HTML5]] for the HTML5-support of your browser)
 
 == Contributors ==
 
