git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1411 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5XMLHttpRequest/README
+++ b/html5XMLHttpRequest/README
@@ -25,6 +25,8 @@ While the most [[Language:HTML5|HTML5]] implementations provide [[client-side]] 
 
 == Illustration ==
 
+The data-request is an [[asynchronous communication|asynchronous]] call, which returns the content of the xml-file as [[Technology:DOM]].
+
 The [[Technology:DOM]]-based [[101feature:Total]]-implementation in [[Language:JavaScript]] is:
 
 <syntaxhighlight lang="javascript">
