git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1415 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5XMLHttpRequest/README
+++ b/html5XMLHttpRequest/README
@@ -6,7 +6,8 @@
 
 * [[Language:HTML5]]
 * [[Language:JavaScript]]
-* [[Language:PHP]]
+* [[Language:php]]
+* [[Language:XML]]
 
 == Technologies ==
 
