git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1418 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5local/README
+++ b/html5local/README
@@ -17,6 +17,8 @@
 * [[101feature:Company]]
 * [[101feature:Total]]
 * [[101feature:Cut]]
+* [[101feature:Persistence]]
+* [[101feature:Interaction]]
 
 == Motivation == 
 
