--- a/html5indexedDatabase/README
+++ b/html5indexedDatabase/README
@@ -16,6 +16,8 @@
 * [[101feature:Company]]
 * [[101feature:Total]]
 * [[101feature:Cut]]
+* [[101feature:Persistence]]
+* [[101feature:Interaction]]
 
 == Motivation ==
 
