--- a/html5session/README
+++ b/html5session/README
@@ -17,6 +17,8 @@
 * [[101feature:Company]]
 * [[101feature:Total]]
 * [[101feature:Cut]]
+* [[101feature:Persistence]]
+* [[101feature:Interaction]]
 
 == Motivation == 
 
