git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1422 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5indexedDatabase/README
+++ b/html5indexedDatabase/README
@@ -9,7 +9,8 @@
 
 == Technologies ==
 
-* [[Technology:B-Tree|B-Tree]]-based indexed database
+* [[Technology:B-Tree|B-Tree]]-based [[Technology:indexed_database|indexed database]]
+* [[Technology:Webbrowser]] (HTML5 compliant)
 
 == Features ==
 
