--- a/html5indexedDatabase/README
+++ b/html5indexedDatabase/README
@@ -61,6 +61,12 @@ companies.indexedDB.cut = function() {
 }
 </syntaxhighlight>
 
+== Architecture ==
+
+The application is implemented with [[Architecture:MVC|MVC]]. There are three views for each concern: company, departments and employees. The implementation is very similar to [[101implementation:html5session]], [[101implementation:html5XMLHttpRequest]] and [[101implementation:html5local]], except that the model is implemented in different ways, concerning the data representation of the specific implementation.
+
+For every object in the [[101feature:Company|data model]], there is a unique-id (unique for single company, department or employee) to grant reliable navigation between the different views.
+
 == Usage ==
 
 * Check out all files from the repository
