--- a/html5session/README
+++ b/html5session/README
@@ -71,6 +71,12 @@ Because of the "stringification" the objects do NOT have backward links, otherwi
 
 == Architecture ==
 
+The application is implemented with [[Architecture:MVC|MVC]]. There are three views for each concern: company, departments and employees. The implementation is very similar to [[101implementation:html5local]], [[101implementation:html5XMLHttpRequest]] and [[101implementation:html5indexedDatabase]], except that the model is implemented in different ways, concerning the data representation of the specific implementation.
+
+For every object in the [[101feature:Company|data model]], there is a unique-id (unique for single company, department or employee) to grant reliable [[101feature:Interaction|Navigation]] between the different views.
+
+== Architecture ==
+
 There is no special architecture for [[Language:HTML5|HTML5]] [[session storage]]. The classes and functions are all defined in the index.html.
 
 == Usage ==
