Small README improvement
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1435 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/strutsXml/README
+++ b/strutsXml/README
@@ -67,7 +67,7 @@ The view layer might be implemented using
 Java Server Pages (JSPs) or other template languages such as Velocity. Here, 
 we use JSPs to implement the view layer. The listing bellow shows 
 a code fragment of the department.jsp view component. You should notice 
-some special tags such as <s:form> and <s:iterator>, which are declared 
+some special tags such as <verbatim><s:form></verbatim> and <verbatim><s:iterator></verbatim>, which are declared 
 in the Struts tag library. Using theses tags we are able to refer to 
 properties of the action that redirected to the specific view. 
 
