git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1446 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/strutsAnnotation/README
+++ b/strutsAnnotation/README
@@ -1,13 +1,12 @@
 == Intent ==
 
-implement a web application with Struts
+implement a web application with Struts, but the redirections 
+rules are implemented using an XML files.
 
 == Languages ==
 
 * [[Language:Java]]
 * [[Language:JavaServerPages]]
-
-== Features == 
 
 == Features ==
 
