git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1455 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/aspectJ/README
+++ b/aspectJ/README
@@ -104,7 +104,7 @@ The Java classes of this object model do not implement any other features.
 Package ''org.softlang.aspectj'' hosts aspects for [[101feature:Total]], 
 [[101feature:Cut]], [[101feature:Depth]], and [[101feature:Logging]]. There is 
 another aspect ''Polymorphism'' which rehashes existing operations (getName,
-total, cut) as an interface ''Operations'' on the relevant classes. Finally, 
+total, cut) as an interface [this!!org/softlang/features/Operations.java Operations] on the relevant classes. Finally, 
 package ''org.softlang.tests'' hosts JUnit tests; see below.
 
 == Usage ==
