--- a/xquery/README
+++ b/xquery/README
@@ -70,6 +70,9 @@ Tested on the following machines:
 <pre>
 	Darwin ... 9.8.0 Darwin Kernel Version 9.8.0: Wed Jul 15 16:55:01 PDT 2009; root:xnu-1228.15.4~1/RELEASE_I386 i386
 		(both test-saxon and test-basex)
+	Darwin ... 10.8.0 Darwin Kernel Version 10.8.0: Tue Jun  7 16:33:36 PDT 
+		(both test-saxon and test-basex)
+2011; root:xnu-1504.15.3~1/RELEASE_I386 i386
 	Linux ... 2.6.32-21-generic #32-Ubuntu SMP Fri Apr 16 08:09:38 UTC 2010 x86_64 GNU/Linux
 		(both test-saxon and test-basex-unix)
 	Microsoft Windows XP [Version 5.1.2600]
