Added Akka actor based implementation
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1463 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/scala2/README
+++ b/scala2/README
@@ -22,7 +22,7 @@ an implementation of the basic spec in [[Language:Scala]] providing typeclass ba
 
 == Motivation ==
 
-This implementation utilizes an idiomatic, functional style approach. The model is realized using only immutable data structures and the total and cut computation are realized by recursively mapping over the elements of the Department tree.
+This implementation utilizes a more idiomatic, functional style approach than [[implementation:scala]]. The model is realized using only immutable data structures and the total and cut computation are realized by recursively mapping over the elements of the Department tree.
 Because the model is immutable, it is easily serialized. In addition, an example of JSON serialization was implemented using the sjson Library by Debasish Ghosh. Serialization patterns for all types of the Company domain are realized by implementing typeclass for each one.
 
 == Architecture ==
