git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1475 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/fsharp/README
+++ b/fsharp/README
@@ -15,6 +15,10 @@ A simple implementation in [[Language:FSharp|F#]] for the [[Technology:.NET]] Fr
 
 == Features ==
 
+* [[101feature:Company]]
+* [[101feature:Total]]
+* [[101feature:Cut]]
+
 == Motivation ==
 
 101comanies model based on F# type system. The model is created in-memory.
