--- a/fsharp/README
+++ b/fsharp/README
@@ -26,18 +26,21 @@ Unit tests are attached.
 
 == Illustration ==
 
+
 <syntaxhighlight lang="fsharp">
     type Company() = 
      class
        let mutable name = ""
-       let mutable departments:List<Department> = new List<Department>()   
+       let mutable departments:List<Department> = new List<Department>() 
+  
        member this.Name with get() = name and set v = name <- v
        member this.Departments with get() = departments and set v = departments <- v
 </syntaxhighlight>
 
 
-<syntaxhighlight lang="fsharp">
+Here we define a member which is essentially a wrapper around pure functional style of calculating total using accumulator. (''fold'' function from F# library is used)
 
+<syntaxhighlight lang="fsharp">
  member this.TotalSalaries =
         let x = List.fold (fun (acc) (elem:Department) -> acc + elem.Total) 0M (List.ofSeq departments)
         x
