git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1482 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5ajax/README
+++ b/html5ajax/README
@@ -13,6 +13,7 @@
 
 * [[Technology:MySQL]]
 * [[Technology:XAMPP]]
+* [[Technology:Apache_HTTP_Server|Apache HTTP Server]]
 * [[Technology:XMLHttpRequest]]
 * [[Technology:Webbrowser]] (HTML5 compliant)
 
