--- a/html5ajax/README
+++ b/html5ajax/README
@@ -42,7 +42,7 @@ This tutorial adopts some parts of [[101implementation:mySql]]. We will use the 
 
 * Download and install XAMPP
 * Open the "XAMPP Control Panel" and start "Apache" and "MySQL"
-* Create a new User "101companies" with Password "101companies" and a new Database "101companies" (use the XAMPP-Tutorial)
+* Create a new User "101companies" with Password "101companies" and a new Database "101companies" (use the XAMPP-Tutorial). You can connect to the database with phpMyAdmin (delivered with XAMPP)
 * Create Tables for the 101companies-application (company.sql)
 * Populate Tables (sampleCompany.sql)
 
